--- a/package.json
+++ b/package.json
@@ -1,65 +1,70 @@
 {
   "name": "socket-template-app",
-  "version": "0.0.0",
+  "version": "0.0.1",
   "license": "MIT",
   "scripts": {
     "ng": "nx",
-    "postinstall": "node ./decorate-angular-cli.js && ngcc --properties es2015 browser module main",
+    "postinstall": "node apps/nx-socket-template/decorate-angular-cli.js && ngcc --properties es2020 browser module main",
     "start": "nx serve",
     "build": "nx build",
     "test": "nx test"
   },
   "private": true,
   "dependencies": {
-    "@angular/animations": "^12.2.0",
-    "@angular/common": "^12.2.0",
-    "@angular/compiler": "^12.2.0",
-    "@angular/core": "^12.2.0",
-    "@angular/forms": "^12.2.0",
-    "@angular/platform-browser": "^12.2.0",
-    "@angular/platform-browser-dynamic": "^12.2.0",
-    "@angular/router": "^12.2.0",
-    "@nestjs/common": "^7.0.0",
-    "@nestjs/core": "^7.0.0",
-    "@nestjs/platform-express": "^7.0.0",
-    "@nrwl/angular": "12.10.1",
+    "@angular/animations": "14.0.6",
+    "@angular/common": "14.0.6",
+    "@angular/compiler": "14.0.6",
+    "@angular/core": "14.0.6",
+    "@angular/forms": "14.0.6",
+    "@angular/platform-browser": "14.0.6",
+    "@angular/platform-browser-dynamic": "14.0.6",
+    "@angular/router": "14.0.6",
+    "@nestjs/common": "9.0.3",
+    "@nestjs/core": "9.0.3",
+    "@nestjs/platform-express": "9.0.3",
+    "@nestjs/platform-socket.io": "^9.0.3",
+    "@nestjs/websockets": "^9.0.3",
+    "@nrwl/angular": "^14.5.0-beta.1",
+    "nanoid": "^3.3.4",
+    "ngx-socket-io": "^4.3.0",
     "reflect-metadata": "^0.1.13",
-    "rxjs": "~6.6.0",
+    "rxjs": "^7.0.0",
     "tslib": "^2.0.0",
-    "zone.js": "~0.11.4"
+    "zone.js": "0.11.6"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "~12.2.0",
-    "@angular-eslint/eslint-plugin": "~12.3.0",
-    "@angular-eslint/eslint-plugin-template": "~12.3.0",
-    "@angular-eslint/template-parser": "~12.3.0",
-    "@angular/cli": "~12.2.0",
-    "@angular/compiler-cli": "^12.2.0",
-    "@angular/language-service": "^12.2.0",
-    "@nestjs/schematics": "^7.0.0",
-    "@nestjs/testing": "^7.0.0",
-    "@nrwl/cli": "12.10.1",
-    "@nrwl/cypress": "12.10.1",
-    "@nrwl/eslint-plugin-nx": "12.10.1",
-    "@nrwl/jest": "12.10.1",
-    "@nrwl/linter": "12.10.1",
-    "@nrwl/nest": "12.10.1",
-    "@nrwl/node": "12.10.1",
-    "@nrwl/nx-cloud": "latest",
-    "@nrwl/tao": "12.10.1",
-    "@nrwl/workspace": "12.10.1",
-    "@types/jest": "27.0.2",
-    "@types/node": "14.14.33",
-    "@typescript-eslint/eslint-plugin": "~4.31.1",
-    "@typescript-eslint/parser": "~4.31.1",
+    "@angular-devkit/build-angular": "14.0.6",
+    "@angular-eslint/eslint-plugin": "14.0.2",
+    "@angular-eslint/eslint-plugin-template": "14.0.2",
+    "@angular-eslint/template-parser": "14.0.2",
+    "@angular/cli": "~14.0.0",
+    "@angular/compiler-cli": "14.0.6",
+    "@angular/language-service": "14.0.6",
+    "@nestjs/schematics": "9.0.1",
+    "@nestjs/testing": "9.0.3",
+    "@nrwl/cli": "14.5.0-beta.1",
+    "@nrwl/cypress": "14.5.0-beta.1",
+    "@nrwl/eslint-plugin-nx": "14.5.0-beta.1",
+    "@nrwl/jest": "14.5.0-beta.1",
+    "@nrwl/linter": "14.5.0-beta.1",
+    "@nrwl/nest": "14.5.0-beta.1",
+    "@nrwl/node": "14.5.0-beta.1",
+    "@nrwl/nx-cloud": "14.2.0",
+    "@nrwl/workspace": "14.5.0-beta.1",
+    "@types/jest": "27.4.1",
+    "@types/node": "18.0.0",
+    "@typescript-eslint/eslint-plugin": "5.29.0",
+    "@typescript-eslint/parser": "5.29.0",
     "cypress": "^8.3.0",
-    "eslint": "7.22.0",
+    "eslint": "8.15.0",
     "eslint-config-prettier": "8.1.0",
     "eslint-plugin-cypress": "^2.10.3",
-    "jest": "27.2.3",
-    "jest-preset-angular": "10.0.1",
-    "prettier": "^2.3.1",
-    "ts-jest": "27.0.5",
-    "typescript": "~4.3.5"
+    "jest": "27.5.1",
+    "jest-preset-angular": "11.1.2",
+    "nx": "14.4.2",
+    "prettier": "2.6.2",
+    "ts-jest": "27.1.4",
+    "ts-node": "~10.8.0",
+    "typescript": "4.7.4"
   }
 }
