--- a/tsconfig.base.json
+++ b/tsconfig.base.json
@@ -15,12 +15,25 @@
     "skipDefaultLibCheck": true,
     "baseUrl": ".",
     "paths": {
-      "@shared/utils": ["libs/shared/utils/src/index.ts"],
-      "@socket-template-app/api-interfaces": ["libs/api-interfaces/src/index.ts"],
+      "@socket-template-app/utils": ["libs/shared/utils/src/index.ts"],
+      "@socket-template-app/api-interfaces": [
+        "libs/api-interfaces/src/index.ts"
+      ],
       "@socket-template-app/api/socket": ["libs/api/socket/src/index.ts"],
-      "@socket-template-app/nx-socket-template/data-access": [
+      "@socket-template-app/data-access": [
         "libs/nx-socket-template/data-access/src/index.ts"
-      ]
+      ],
+      "@socket-template-app/home": [
+        "libs/nx-socket-template/home/src/index.ts"
+      ],
+      "@socket-template-app/nx-socket-template/ui": [
+        "libs/nx-socket-template/ui/src/index.ts"
+      ],
+      "@socket-template-app/room": [
+        "libs/nx-socket-template/room/src/index.ts"
+      ],
+      "@socket-template-app/domain/*": ["libs/shared/domain/src/lib/*"],
+      "@socket-template-app/domain": ["libs/shared/domain/src/index.ts"]
     }
   },
   "exclude": ["node_modules", "tmp"]
