--- a/libs/shared/domain/project.json
+++ b/libs/shared/domain/project.json
@@ -1,4 +1,5 @@
 {
+  "name": "shared-domain",
   "$schema": "../../../node_modules/nx/schemas/project-schema.json",
   "sourceRoot": "libs/shared/domain/src",
   "projectType": "library",
@@ -22,7 +23,7 @@
     },
     "test": {
       "executor": "@nrwl/jest:jest",
-      "outputs": ["coverage/libs/shared/domain"],
+      "outputs": ["{workspaceRoot}/coverage/libs/shared/domain"],
       "options": {
         "jestConfig": "libs/shared/domain/jest.config.ts",
         "passWithNoTests": true
